--- a/aartics/projects/aarti_horiz/index.htm
+++ b/aartics/projects/aarti_horiz/index.htm
@@ -24,25 +24,21 @@
     </ul>
     </header>
     <div class="aarticslogo">
-        <a href="#about" id="logo"><img id="icon" width="40px" src="aartics_icon.png"/></a>
+        <img id="logo" width="40px" src="aartics_icon.png"/>
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures. I am passionate about mixed realities, and I'm not afraid of complexity.<br><br><br><br>see my <span>UX projects</span> or dive into <span>other designs.</span></p>
+        <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures. I am passionate about mixed realities, and I'm not afraid of complexity.<br>this is my story.</p>
+        <div class="logowrapper">
+          <a href="" class="logoc"><img src="img/resume.png"/></a>
+          <a href="" class="logoc"><img src="img/linkedin.png"/></a>
+          <a href="" class="logoc"><img src="img/mail.png"/></a>
+          <a href="" class="logoc"><img src="img/github.png"/></a>
+        </div>
     </div>
-<!--     <div class="child4 bzuttons">
-      <ul id="ul_home_hypers">
-          <li class="home_buts"><button class="homebut" id="bz0">About</button></li>
-          <li class="home_buts"><button class="homebut" id="bz1">UX Designer</button></li>
-          <li class="home_buts"><button class="homebut" id="bz2">Architect</button></li>
-          <li class="home_buts"><button class="homebut" id="bz3">Maker</button></li>
-          <li class="home_buts"><button class="homebut" id="bz4">Engineer</button></li>
-          <li class="home_buts"><button class="homebut" id="bz5">Resume</button></li>
-      </ul>
-    </div> -->
     <div class="horizon parent">
       <div class="child1">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -15 3500 760" id="bigsvg">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -15 3700 760" id="bigsvg">
   <polygon id="k01" class="cls-1" points="2912.5 378.5 3050.5 378.5 3200.5 120.5 2917.5 222.5 2867.5 301.5 2912.5 378.5"/>
   <polygon id="k02" class="cls-1" points="2867.5 455.5 3012.5 558.5 3200.5 636.5 3050.5 378.5 2912.5 378.5 2867.5 455.5"/>
   <polygon id="s95" class="cls-1" points="2868.5 459.5 2903.5 463.5 2951.5 546.5 2913.5 538.5 2868.5 459.5"/>
@@ -124,12 +120,22 @@
   </g>
   <polygon id="_41" data-name="41" class="cls-2" points="2546.42 379.5 2450.58 379.5 2402.66 462.5 2450.58 545.5 2546.42 545.5 2594.34 462.5 2546.42 379.5"/>
   <polygon id="s83" class="cls-1" points="2665.5 548.5 2616.5 524.5 2696.5 524.5 2763.5 548.5 2665.5 548.5"/>
-  <polygon id="_37" data-name="37" class="cls-2" points="2649.96 146.5 2561.04 146.5 2516.59 223.5 2561.04 300.5 2649.96 300.5 2694.41 223.5 2649.96 146.5"/>
+  <g id="ilike3d" data-attach="#_37" class="attached">
+    <polygon id="_37" data-name="37" class="cls-2 nibbler" points="2649.96 146.5 2561.04 146.5 2516.59 223.5 2561.04 300.5 2649.96 300.5 2694.41 223.5 2649.96 146.5"/>
+    <text x="2000" y="180" data-x-rel="-100" class="ilike">i &hearts;</text>
+    <text x="2000" y="200" data-x-rel="-100" class="interest">making &amp;</text>
+    <text x="2000" y="220" data-x-rel="-100" class="interest">printing 3D</text>
+  </g>
   <polygon id="xx03" class="cls-1" points="2684.5 296.5 2665.5 302.5 2711.5 223.5 2732.5 214.5 2684.5 296.5"/>
   <polygon id="_43" data-name="43" class="cls-2" points="3047.42 381.5 2951.58 381.5 2903.66 464.5 2951.58 547.5 3047.42 547.5 3095.34 464.5 3047.42 381.5"/>
   <polygon id="_47" data-name="47" class="cls-2" points="2763.57 549.5 2665.43 549.5 2616.35 634.5 2665.43 719.5 2763.57 719.5 2812.65 634.5 2763.57 549.5"/>
   <polygon id="s81" class="cls-1" points="2716.5 646.5 2714.5 634.5 2763.5 549.5 2767.5 558.5 2716.5 646.5"/>
-  <polygon id="_26" data-name="26" class="cls-2" points="2159.67 303.5 2070.18 303.5 2025.43 381 2070.18 458.5 2159.67 458.5 2204.41 381 2159.67 303.5"/>
+  <g id="ilikemodel" data-attach="#_26" class="attached">
+    <polygon id="_26" data-name="26" class="cls-2 nibbler" points="2159.67 303.5 2070.18 303.5 2025.43 381 2070.18 458.5 2159.67 458.5 2204.41 381 2159.67 303.5"/>
+    <text x="2000" y="340" data-x-rel="-120" class="ilike">i &hearts;</text>
+    <text x="2000" y="360" data-x-rel="-120" class="interest">solving problems</text>
+    <text x="2000" y="380" data-x-rel="-120" class="interest">at scale</text>
+  </g>
   <polygon id="s51" class="cls-1" points="1997.5 381.5 1926.5 504.5 1845.5 467.5 1896.5 379.5 1997.5 381.5"/>
   <g id="barcelona_box" data-attach="#_27" class="attached">
       <polygon id="_27" data-name="27" class="cls-2 project_box_arch has_link" points="2165.32 146.5 2074.68 146.5 2029.36 225 2074.68 303.5 2165.32 303.5 2210.64 225 2165.32 146.5"/>
@@ -142,8 +148,8 @@
       <text x="2000" y="240" data-x-rel="-137" id="arctitle" class="casestudy"><a href="projects/aartics_architecture.pdf">ARCHITECTURE:</a></text>
       <text x="2000" y="340" data-x-rel="-135" id="arc1" class="projectname"><a href="projects/aartics_architecture.pdf">portfolio</a></text>
   </g>
-  <polygon id="_32" data-name="32" class="cls-2" points="2592.48 543.5 2499.52 543.5 2453.05 624 2499.52 704.5 2592.48 704.5 2638.95 624 2592.48 543.5"/>
   <polygon id="yy4" class="cls-1" points="2530.5 539.5 2586.5 556.5 2637.5 645.5 2580.5 623.5 2530.5 539.5"/>
+  <polygon id="_32" data-name="32" class="cls-2" points="2592.48 543.5 2499.52 543.5 2453.05 624 2499.52 704.5 2592.48 704.5 2638.95 624 2592.48 543.5"/>
   <polygon id="s74" class="cls-1" points="2554.5 215.5 2546.5 224.5 2589.5 147.5 2601.5 133.5 2554.5 215.5"/>
   <g id="bendy_box" data-attach="#_38" class="attached raleway">
       <polygon id="_38" data-name="38" class="cls-2 project_box_product has_link" points="2628.54 51.5 2534.62 51.5 2487.66 132.84 2534.62 214.17 2628.54 214.17 2675.5 132.84 2628.54 51.5"/>
@@ -229,11 +235,9 @@
       <text x="2000" y="445" data-x-rel="-130" id="msc3" class="projectname"><a href="projects/assen">assen</text>
   </g>
   <g id="m_d_i_a_box" data-attach="#_13" class="attached raleway">
-      <polygon id="_13" data-name="13" class="cls-2" points="1461.44 379.5 1365.02 379.5 1316.82 463 1365.02 546.5 1461.44 546.5 1509.65 463 1461.44 379.5"/>
-      <text x="1030" y="425" data-x-rel="-125" id="mdia7" class="ux"></text>
-      <text x="1010" y="450" data-x-rel="-145" id="mdia8" class="ux">i like</text>
-      <text x="1015" y="475" data-x-rel="-140" id="mdia9" class="ux">VR</text>
-      <text x="1010" y="500" data-x-rel="-145" id="mdia10" class="ux"></text>
+      <polygon id="_13" data-name="13" class="cls-2 nibbler" points="1461.44 379.5 1365.02 379.5 1316.82 463 1365.02 546.5 1461.44 546.5 1509.65 463 1461.44 379.5"/>
+      <text x="1010" y="450" data-x-rel="-145" id="mdia8" class="ilike">i &hearts;</text>
+      <text x="1015" y="475" data-x-rel="-140" id="mdia9" class="interest">3D</text>
   </g>
   <polygon id="s44" class="cls-1" points="1455.5 602.5 1369.5 549.5 1331.5 470.5 1392.5 493.5 1455.5 602.5"/>
   <polygon id="_15" data-name="15" class="cls-2" points="1642.1 469.5 1539.29 469.5 1487.89 558.53 1539.29 647.57 1642.1 647.57 1693.5 558.53 1642.1 469.5"/>
@@ -244,10 +248,9 @@
   <polygon id="s2" class="cls-1" points="1035.5 178.5 1022.5 104.5 1074.5 196.5 1074.5 245.5 1035.5 178.5"/>
   <polygon id="_6" data-name="6" class="cls-2" points="1170.57 214.29 1075.19 214.29 1027.5 296.9 1075.19 379.5 1170.57 379.5 1218.26 296.9 1170.57 214.29"/>
   <g id="i_r_p_box" data-attach="#_11" class="attached raleway">
-      <polygon id="_11" data-name="11" class="cls-2" points="1480.88 204.16 1379.66 204.16 1329.04 291.83 1379.66 379.5 1480.88 379.5 1531.5 291.83 1480.88 204.16"/>
-      <text x="1050" y="275" data-x-rel="-128" id="tirp5" class="ux">i like</text>
-      <text x="1050" y="300" data-x-rel="-128" id="tirp6" class="ux">AI</text>
-      <text x="1028" y="325" data-x-rel="-150" id="tirp7" class="ux"></text>
+      <polygon id="_11" data-name="11" class="cls-2 nibbler" points="1480.88 204.16 1379.66 204.16 1329.04 291.83 1379.66 379.5 1480.88 379.5 1531.5 291.83 1480.88 204.16"/>
+      <text x="1050" y="275" data-x-rel="-128" id="tirp5" class="ilike">i &hearts;</text>
+      <text x="1050" y="300" data-x-rel="-128" id="tirp6" class="interest">AI</text>
   </g>
   <polygon id="s5" class="cls-1" points="1329.5 467.5 1391.5 490.5 1264.5 490.5 1226.5 467.5 1329.5 467.5"/>
   <g id="ux_title_box" data-attach="#_4" class="attached raleway">
@@ -258,11 +261,9 @@
   <polygon id="s19" class="cls-1" points="1074.5 214.5 1170.5 214.5 1180.5 196.5 1074.5 196.5 1074.5 214.5"/>
   <polygon id="s18" class="cls-1" points="1197.5 169.5 1170.5 214.5 1218.5 296.5 1258.5 273.5 1197.5 169.5"/>
   <g id="r_b_d_box" data-attach="#_12" class="attached raleway">
-      <polygon id="_12" data-name="12" class="cls-2" points="1328.98 292.5 1227.95 292.5 1177.43 380 1227.95 467.5 1328.98 467.5 1379.5 380 1328.98 292.5"/>
-      <text x="885" y="350" data-x-rel="-140" id="tr3" class="ux"></text>
-      <text x="875" y="375" data-x-rel="-150" id="tr4" class="ux">i like</text>
-      <text x="880" y="400" data-x-rel="-145" id="tr5" class="ux">3D</text>
-      <text x="885" y="425" data-x-rel="-140" id="tr6" class="ux"></text>
+      <polygon id="_12" data-name="12" class="cls-2 nibbler" points="1328.98 292.5 1227.95 292.5 1177.43 380 1227.95 467.5 1328.98 467.5 1379.5 380 1328.98 292.5"/>
+      <text x="875" y="375" data-x-rel="-150" id="tr4" class="ilike">i &hearts;</text>
+      <text x="880" y="400" data-x-rel="-145" id="tr5" class="interest">VR</text>
   </g>
   <polygon id="s47" class="cls-1" points="1379.5 273.5 1439.5 169.5 1378.5 195.5 1332.5 283.5 1379.5 273.5"/>
   <polygon id="s4" class="cls-1" points="1226.5 292.5 1258.5 273.5 1379.5 273.5 1329.5 292.5 1226.5 292.5"/>
@@ -282,7 +283,11 @@
       <text x="2000" y="330" data-x-rel="-150" id="uda1" class="projectname"><a href="projects/octet">octet truss</a></text>
       <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="projects/octet">block</a></text>
   </g>
-  <polygon id="_46" data-name="46" class="cls-2" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
+  <g id="ilikeopen" data-attach="#_46" class="attached">
+    <polygon id="_46" data-name="46" class="cls-2 nibbler" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
+    <text x="2000" y="320" data-x-rel="-100" class="ilike">i &hearts;</text>
+    <text x="2000" y="340" data-x-rel="-100" class="interest">open source</text>
+  </g>
   <polygon id="s86" class="cls-1" points="2833.5 293.5 2939.5 273.5 3060.5 273.5 2934.5 293.5 2833.5 293.5"/>
   <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
 <!--       <clipPath id="clipPath_wolf_box">
@@ -294,10 +299,10 @@
       <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/wolflion">wolf &amp; lion</a></text>
   </g>
   <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
-<!--       <clipPath id="clipPath_resonate_box">
+      <clipPath id="clipPath_resonate_box">
           <polygon points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       </clipPath>
-      <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/> -->
+      <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/>
       <polygon id="_7" data-name="7" class="cls-2 project_box has_link" points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       <text x="920" y="85" data-x-rel="-165" id="trai6" class="casestudy"><a href="projects/resonateai">UX CASE STUDY:</a></text>
       <text x="912" y="255" data-x-rel="-173" id="trai8" class="projectname"><a href="projects/resonateai">resonate.ai</a></text>
@@ -311,7 +316,12 @@
       <text x="1255" y="300" data-x-rel="-155" id="trsf6" class="casestudy"><a href="projects/sfac">UX CASE STUDY:</a></text>
       <text x="1280" y="460" data-x-rel="-130" id="trsf8" class="projectname"><a href="projects/sfac">sfac</a></text>                
   </g>
-  <polygon id="_20" data-name="20" class="cls-2" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
+  <g id="ilikehuman" data-attach="#_20" class="attached">
+    <polygon id="_20" data-name="20" class="cls-2 nibbler" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
+    <text x="2000" y="480" data-x-rel="-145" class="ilike">i &hearts;</text>
+    <text x="2000" y="500" data-x-rel="-145" class="interest">designing</text>
+    <text x="2000" y="520" data-x-rel="-145" class="interest">for humans</text>
+  </g>
   <g id="mumbai_box" data-attach="#_30" class="attached">
       <polygon id="_30" data-name="30" class="cls-2 project_box_arch has_link" points="2139.72 381.5 1998.28 381.5 1927.55 504 1998.28 626.5 2139.72 626.5 2210.45 504 2139.72 381.5"/>
       <text x="2000" y="400" data-x-rel="-190" id="mumbai0" class="casestudy"><a href="projects/mumbai">URBAN PLANNING:</a></text>
@@ -350,17 +360,21 @@
         </svg>
       </div>
         <div class="child2">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="760px" viewBox="0 0 1200 760" id="halo">
-          <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="760px" viewBox="0 0 1200 760" id="halo">
+            <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
                 <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-                <text x="1010" y="393" data-x-rel="-67" id="aarti">&#9900;&#9900;</text>
+<!--                 <text x="1010" y="393" data-x-rel="-67" id="aarti">&#9900;&#9900;</text> -->
             </g>
-              <defs>
-                <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
-                  <stop offset="95%" stop-color="#22313f"/>
-                  <stop offset="5%" stop-color="#fff"/>
-                </linearGradient>
-              </defs>
+            <defs>
+              <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="95%" stop-color="#22313f"/>
+                <stop offset="5%" stop-color="#fff"/>
+              </linearGradient>
+              <linearGradient id="linear2" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="95%" stop-color="#22313f"/>
+                <stop offset="5%" stop-color="#1EFC1E"/>
+              </linearGradient>              
+            </defs>
           </svg>
       </div>
     </div>
