mobile version ready. working aarti_vert. new branch to start

--- a/aartics/projects/aarti_vert/index.htm
+++ b/aartics/projects/aarti_vert/index.htm
@@ -110,9 +110,9 @@
   <polygon id="s36" class="cls-1" points="710.6 3192.46 829.1 3259.96 842.6 3286.96 718.1 3214.96 710.6 3192.46"/>
   <g id="chess_box" data-attach="#_39" class="attached raleway">
       <polygon id="_39" data-name="39" class="cls-2 project_box_product has_link" points="712.1 3904.68 712.1 3772.11 597.29 3705.82 482.48 3772.11 482.48 3904.68 597.29 3970.96 712.1 3904.68"/>
-      <text x="540" y="320" data-y-rel="-195" id="chess1" class="casestudy cspg"><a href="https://github.com/aartics/chess_models" target="_blank">PRODUCT:</a></text>
-      <text x="510" y="410" data-y-rel="-130" id="chess2" class="projectname"><a href="https://github.com/aartics/chess_models" target="_blank">chess of</a></text>
-      <text x="520" y="430" data-y-rel="-80" id="chess3" class="projectname"><a href="https://github.com/aartics/chess_models" target="_blank">thrones</a></text>
+      <text x="540" y="320" data-y-rel="-195" id="chess1" class="casestudy cspg"><a href="https://github.com/aartics/chess_models">PRODUCT:</a></text>
+      <text x="510" y="410" data-y-rel="-130" id="chess2" class="projectname"><a href="https://github.com/aartics/chess_models">chess of</a></text>
+      <text x="520" y="430" data-y-rel="-80" id="chess3" class="projectname"><a href="https://github.com/aartics/chess_models">thrones</a></text>
   </g>
   <polygon id="_41" data-name="41" class="cls-2" points="596.6 3763.84 596.6 3620.08 472.1 3548.2 347.6 3620.08 347.6 3763.84 472.1 3835.72 596.6 3763.84"/>
   <polygon id="s83" class="cls-1" points="343.1 3942.46 379.1 3868.96 379.1 3988.96 343.1 4089.46 343.1 3942.46"/>
@@ -122,7 +122,7 @@
   <polygon id="xx03" class="cls-1" points="721.1 3970.96 712.1 3942.46 830.6 4011.46 844.1 4042.96 721.1 3970.96"/>
   <g id="linkedin_box" data-attach="#_43" class="attached raleway">
     <polygon id="_43" data-name="43" class="cls-2 project_box_soft has_link" points="593.6 4515.34 593.6 4371.58 469.1 4299.7 344.6 4371.58 344.6 4515.34 469.1 4587.22 593.6 4515.34"/>
-    <text x="395" y="410" data-y-rel="-130" id="linkedinlink" class="projectname"><a href="https://www.linkedin.com/in/aartics" target="_blank">linkedin</a></text>            
+    <text x="395" y="410" data-y-rel="-130" id="linkedinlink" class="projectname"><a href="https://www.linkedin.com/in/aartics">linkedin</a></text>            
   </g>
   <polygon id="_47" data-name="47" class="cls-2" points="341.6 4089.57 341.6 3942.35 214.09 3868.74 86.59 3942.35 86.59 4089.57 214.09 4163.19 341.6 4089.57"/>
   <polygon id="s81" class="cls-1" points="196.09 4018.96 214.09 4015.96 341.6 4089.46 328.1 4095.46 196.09 4018.96"/>
@@ -321,26 +321,23 @@
   </g>
   <g id="softw_box" data-attach="#_44" class="attached">
       <polygon id="_44" data-name="44" class="cls-2" points="1069.1 4534.71 1069.1 4353.71 912.35 4263.21 755.6 4353.71 755.6 4534.71 912.35 4625.21 1069.1 4534.71"/>
-      <text x="890" y="170" data-y-rel="-200" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">my</a></text>
-      <text x="850" y="170" data-y-rel="-150" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">github</a></text>
+      <text x="890" y="170" data-y-rel="-200" id="gitlink" class="projectname"><a href="https://github.com/aartics">my</a></text>
+      <text x="850" y="170" data-y-rel="-150" id="gitlink" class="projectname"><a href="https://github.com/aartics">github</a></text>
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="597.38 5415.46 210.42 5192.05 211 4744.54 597.67 4520.48 984.35 4744.54 984.35 5192.05 597.38 5415.46"/>
-      <text x="1000" y="270" data-y-rel="-500" id="credits13" class="credits">ABOUT:</text>
-      <text x="1000" y="295" data-y-rel="-500" id="credits11" class="creditsa"><a href="../projects/aartics_story">prototyping 3D</a></text>
-      <text x="1000" y="315" data-y-rel="-500" id="credits12" class="creditsa"><a href="../projects/aartics_story">in 2D</a></text>
-      <text x="1000" y="345" data-y-rel="-500" id="creditsa" class="credits">i designed and made this</text>
-      <text x="1000" y="365" data-y-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
-      <text x="1000" y="385" data-y-rel="-500" id="credits1" class="credits">-------------------------------------</text>
-      <text x="1000" y="405" data-y-rel="-470" id="credits2" class="credits">sketchup</text>
-      <text x="1000" y="425" data-y-rel="-470" id="credits3" class="credits">photoshop | illustrator</text>
-      <text x="1000" y="445" data-y-rel="-470" id="credits4" class="credits">html | css</text>
-      <text x="1000" y="465" data-y-rel="-470" id="credits5" class="credits">javascript </text>
-      <text x="3000" y="485" data-y-rel="-470" id="credits5" class="credits">---------------------------------</text>
-      <text x="3000" y="505" data-y-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
-      <text x="3000" y="525" data-y-rel="-470" id="credits9" class="credits">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
-      <text x="3000" y="545" data-y-rel="-470" id="credits10" class="credits">---------------------------------</text>
-      <text x="3000" y="565" data-y-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
+      <text x="480" y="270" data-y-rel="-730" class="credits" id="credtitle1">ABOUT ME:</text>
+      <text x="380" y="270" data-y-rel="-680" class="credits">i'm a designer and developer</text>
+      <text x="280" y="270" data-y-rel="-640" class="credits">living in san francisco. i like making models,</text>
+      <text x="280" y="270" data-y-rel="-600" class="credits">maps, 3D printing, drones and open source.</text>
+      <text x="380" y="270" data-y-rel="-530" class="credits">-----------------------------</text>
+      <text x="380" y="270" data-y-rel="-440" class="credits" id="credtitle2">ABOUT THIS WEBSITE:</text>
+      <text x="280" y="270" data-y-rel="-390" class="credits">i designed and developed this 3D website!</text>
+      <text x="270" y="270" data-y-rel="-340" class="credits" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
+      <text x="280" y="270" data-y-rel="-310" class="credits"></text>
+      <text x="340" y="270" data-y-rel="-290" class="credits">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
+      <text x="380" y="270" data-y-rel="-210" class="credits">-----------------------------</text>
+      <text x="400" y="270" data-y-rel="-160" class="credits">&copy; copyright aartics 2017</text>
   </g>                 
         </svg>
       </div>
