--- a/aartics/m/index.htm
+++ b/aartics/m/index.htm
@@ -33,10 +33,10 @@
         <h1>hello world, i'm aarti...</h1>
         <p>I'm a UX Designer + Engineer.<br> I'm bringing together my past experience in architecture and software engineering </br>to build new futures.<br> I am passionate about mixed realities, <br>and I'm not afraid of complexity.</p>
         <div class="logowrapper">
-          <a href="" class="logoc"><img src="img/resume.png"/></a>
-          <a href="" class="logoc"><img src="img/linkedin.png"/></a>
-          <a href="" class="logoc"><img src="img/mail.png"/></a>
-          <a href="" class="logoc"><img src="img/github.png"/></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
         </div>
     </div>
     <div class="horizon parent">
@@ -326,11 +326,11 @@
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="597.38 5415.46 210.42 5192.05 211 4744.54 597.67 4520.48 984.35 4744.54 984.35 5192.05 597.38 5415.46"/>
-      <text x="480" y="270" data-y-rel="-730" class="credits" id="credtitle1">ABOUT ME:</text>
-      <text x="380" y="270" data-y-rel="-680" class="credits">i'm a designer and developer</text>
-      <text x="280" y="270" data-y-rel="-640" class="credits">living in san francisco. i like making models,</text>
-      <text x="280" y="270" data-y-rel="-600" class="credits">maps, 3D printing, drones and open source.</text>
-      <text x="380" y="270" data-y-rel="-530" class="credits">-----------------------------</text>
+      <text x="480" y="270" data-y-rel="-700" class="credits" id="credtitle1">ABOUT ME:</text>
+      <text x="320" y="270" data-y-rel="-650" class="credits">i'm aarti sharma - a designer/engineer</text>
+      <text x="280" y="270" data-y-rel="-610" class="credits">living in san francisco. i like 3D technology.</text>
+      <text x="320" y="270" data-y-rel="-560" class="credits" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+      <text x="380" y="270" data-y-rel="-500" class="credits">-----------------------------</text>
       <text x="380" y="270" data-y-rel="-440" class="credits" id="credtitle2">ABOUT THIS WEBSITE:</text>
       <text x="280" y="270" data-y-rel="-390" class="credits">i designed and developed this 3D website!</text>
       <text x="270" y="270" data-y-rel="-340" class="credits" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
