--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -29,10 +29,10 @@
         <h1>hello world, i'm aarti...</h1>
         <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures.<br> I am passionate about mixed realities, and I'm not afraid of complexity.</p>
         <div class="logowrapper">
-          <a href="" class="logoc"><img src="img/resume.png"/></a>
-          <a href="" class="logoc"><img src="img/linkedin.png"/></a>
-          <a href="" class="logoc"><img src="img/mail.png"/></a>
-          <a href="" class="logoc"><img src="img/github.png"/></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="img/github.png"/></a>
         </div>
     </div>
     <div class="horizon parent">
