hex selection prevented on mobile

--- a/aartics/m/index.htm
+++ b/aartics/m/index.htm
@@ -341,10 +341,10 @@
   </g>                 
         </svg>
       </div>
-        <div class="child2">
+        <div class="child2 noSelect">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1200 1600" id="halo">
-            <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
-                <polygon id="_1" data-name="1" class="cls-2 contact_class" points="594.76 1560.46 141.42 1298.73 142.09 774.46 595.1 511.96 1048.1 774.46 1048.1 1298.73 594.76 1560.46"/>
+            <g id="contact_box" data-attach="#_1" class="attached noSelect" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
+                <polygon id="_1" data-name="1" class="cls-2 contact_class noSelect" points="594.76 1560.46 141.42 1298.73 142.09 774.46 595.1 511.96 1048.1 774.46 1048.1 1298.73 594.76 1560.46"/>
             </g>
             <defs>
               <linearGradient id="linear" x1="0%" y1="0%" x2="0%" y2="100%">
