--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -9,6 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
+  <style>
+    #landing {
+        height: 100vh;
+        background: url(local_img/001.png) no-repeat center;
+        background-color: #22313f;
+    }
+  </style>
 </head>
 
 <body>
@@ -24,8 +31,7 @@
   </div>
 </div>
 
-<div id="bcgcover">
-  <img id="cover" src="local_img/001.png"/>
+<div id="landing">
 </div>
 
 <div id="contents">
