--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -4,26 +4,36 @@
 <head>
   <meta charset="utf-8">
   <title>aartics_resonateai</title>
-  <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
+  <meta name="viewport" content="initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
   <style>
-    #landing {
-        height: 100vh;
-        background: url(local_img/001.png) no-repeat center;
-        background-color: #22313f;
-    }
+      #landing {
+          height: 100vh;
+          background: url(local_img/001.png) no-repeat center;
+          background-color: #22313f;
+      }
+
+     @media screen and (min-width:1200px) {
+        #landing {
+            height: 100vh;
+            background: url(local_img/001.png) no-repeat center;
+            background-color: #22313f;
+        }
+     }
   </style>
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    <div id="logoaa">
+      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
+    </div>
     <div id="back-button">
-    <a href="http://www.aartics.com">aartics.com</a>
+      <a href="http://www.aartics.com">aartics.com</a>
     </div>
     <span class="project-name">
       <a href="#cover">project: resonate.ai</a>
