--- a/aartics/projects/assen/index.htm
+++ b/aartics/projects/assen/index.htm
@@ -8,24 +8,46 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../aartics_projects.css">
+  <style>
+      #landing {
+          height: 1350px;
+          background: url(local_img/001.png);
+          background-repeat: no-repeat;
+          background-position: center 200px;
+          background-color: #22313f;
+          background-size: 195%;
+      }
+  </style>
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
-    <div id="back-button">
-    <a href="http://www.aartics.com">aartics.com</a>
+    <div id="logoaa">
+      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
     </div>
-    <span class="project-name">
-      project: city boulevard, assen
+    <div id="back-button">
+      <a href="http://www.aartics.com">aartics.com</a>
+    </div>
+    <span class="dropdown">
+        <button class="dropbtn">Urban Design: City Boulevard, Assen</button>
+        <div class="dropdown-content">
+          <a href="../aartics_architecture.pdf">Architecture Portfolio PDF</a>
+          <a href="../coimbatore">Architecture: Mall in Coimbatore</a>
+          <a href="../assen">Urban Design: City Boulevard, Assen</a>
+          <a href="../mumbai">Urban Design: Recentering Mumbai</a>
+          <a href="../barcelona">Urban Planning: Barcelona Idea</a>
+          <a href="https://www.aartics.com">More projects</a>
+        </div>
     </span>
   </div>
 </div>
-<div id="bcgcover">
-  <img id="cover" src="local_img/001.png"/>
+
+<div id="landing">
 </div>
+
 <div id="project-content">
   <div class="image-title">
   Project Context
@@ -51,9 +73,25 @@
   </div> 
   <img src="local_img/assen_pic3.png"/>
 </div>
-
+  <footer>
+    <div class="parentfooter">
+        <div class="signature">
+          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+        </div>
+        <div class="logowrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
+        </div>
+    </div>
+  </footer>
 
   <script>
+    if(window.innerHeight < window.innerWidth){
+        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
+    }
   </script>
 </body>
 </html>
