--- a/aartics/projects/karunavr/index.htm
+++ b/aartics/projects/karunavr/index.htm
@@ -8,31 +8,67 @@
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../aartics_projects.css">
+  <style>
+      #landing {
+          height: 1350px;
+          background: url(local_img/001.png);
+          background-repeat: no-repeat;
+          background-position: center 200px;
+          background-color: #22313f;
+          background-size: 195%;
+      }
+  </style>
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
-    <div id="back-button">
-    <a href="http://www.aartics.com">aartics.com</a>
+    <div id="logoaa">
+      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
     </div>
-    <span class="project-name">
-      project: KarunaVR
+    <div id="back-button">
+      <a href="http://www.aartics.com">aartics.com</a>
+    </div>
+    <span class="dropdown">
+        <button class="dropbtn">UX project: Karuna VR</button>
+        <div class="dropdown-content">
+          <a href="../resonateai">UX project: Karuna VR</a>
+          <a href="../aartics_story">Web Dev: 3D aartics.com</a>
+          <a href="../sfac">UX project: SF Arts Commission</a>
+          <a href="../wolflion">UX project: Wolf and Lion</a>
+          <a href="../karunavr">UX project: Karuna VR</a>
+          <a href="https://www.aartics.com">More projects</a>
+        </div>
     </span>
   </div>
 </div>
-<div id="bcgcover">
-  <img id="cover" src="local_img/001.png"/>
+
+<div id="landing">
 </div>
 
-<div id="project-content">
-
-</div>
+  <footer>
+    <div class="parentfooter">
+        <div class="signature">
+          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+        </div>
+        <div class="logowrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
+        </div>
+    </div>
+  </footer>
 
 
   <script>
+    if(window.innerHeight < window.innerWidth){
+        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
+    }
   </script>
+  
 </body>
 </html>
