--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -5,24 +5,19 @@
   <meta charset="utf-8">
   <title>aartics_resonateai</title>
   <meta name="aarti c sharma" content="aartics_portfolio">
-  <meta name="viewport" content="initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="../aartics_projects.css">
   <style>
       #landing {
-          height: 100vh;
-          background: url(local_img/001.png) no-repeat center;
+          height: 1350px;
+          background: url(local_img/001.png);
+          background-repeat: no-repeat;
+          background-position: center 200px;
           background-color: #22313f;
+          background-size: 195%;
       }
-
-     @media screen and (min-width:1200px) {
-        #landing {
-            height: 100vh;
-            background: url(local_img/001.png) no-repeat center;
-            background-color: #22313f;
-        }
-     }
   </style>
 </head>
 
@@ -35,8 +30,16 @@
     <div id="back-button">
       <a href="http://www.aartics.com">aartics.com</a>
     </div>
-    <span class="project-name">
-      <a href="#cover">project: resonate.ai</a>
+    <span class="dropdown">
+        <button class="dropbtn">UX project: Resonate.ai</button>
+        <div class="dropdown-content">
+          <a href="../resonateai">UX project: Resonate.ai</a>
+          <a href="../aartics_story">UX project: 3D aartics.com</a>
+          <a href="../sfac">UX project: SF Arts Commission</a>
+          <a href="../wolflion">UX project: Wolf and Lion</a>
+          <a href="../karunavr">UX project: Karuna VR</a>
+          <a href="https://www.aartics.com">More projects</a>
+        </div>
     </span>
   </div>
 </div>
@@ -45,7 +48,7 @@
 </div>
 
 <div id="contents">
-<h2>Content:</h2>
+<h2>Project Content Index:</h2>
   <ul>
     <li><a href="#bef">Resonate.ai - Before and After</a></li>
     <li><a href="#comp">Competitive and Comparative Analyses</a></li>
@@ -122,8 +125,25 @@
   </div> 
 </div>
 
+  <footer>
+    <div class="parentfooter">
+        <div class="signature">
+          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+        </div>
+        <div class="logowrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
+        </div>
+    </div>
+  </footer>
 
   <script>
+    if(window.innerHeight < window.innerWidth){
+        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
+    }
   </script>
 </body>
 </html>
