--- a/aartics/projects/wolflion/index.htm
+++ b/aartics/projects/wolflion/index.htm
@@ -9,27 +9,46 @@
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="../aartics_projects.css">
+  <style>
+      #landing {
+          height: 1350px;
+          background: url(local_img/001.png);
+          background-repeat: no-repeat;
+          background-position: center 200px;
+          background-color: #22313f;
+          background-size: 195%;
+      }
+  </style>
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
-    <div id="back-button">
-    <a href="http://www.aartics.com">aartics.com</a>
+    <div id="logoaa">
+      <a href="http://www.aartics.com"><img id="icon" src="../aartics_icon.png"/></a>
     </div>
-    <span class="project-name">
-      <a href="#cover">project: online pet store experience</a>
+    <div id="back-button">
+      <a href="http://www.aartics.com">aartics.com</a>
+    </div>
+    <span class="dropdown">
+        <button class="dropbtn">UX project: Wolf and Lion</button>
+        <div class="dropdown-content">
+          <a href="../resonateai">UX project: Resonate.ai</a>
+          <a href="../aartics_story">UX project: 3D aartics.com</a>
+          <a href="../sfac">UX project: SF Arts Commission</a>
+          <a href="../wolflion">UX project: Wolf and Lion</a>
+          <a href="../karunavr">UX project: Karuna VR</a>
+          <a href="https://www.aartics.com">More projects</a>
+        </div>
     </span>
   </div>
 </div>
 
-<div id="bcgcover">
-  <a href="https://invis.io/THAEZ03UR"><img id="cover" src="local_img/001.png"/></a>
+<div id="landing">
 </div>
 
 <div id="contents">
-<h2>Content:</h2>
+<h2>Project Content Index:</h2>
   <ul>
     <li><a href="#bef">Innovative e-commerce for an online pet store experience</a></li>
     <li><a href="#map">System Flow Map</a></li>
@@ -71,8 +90,26 @@
 </div>
 
 <!--   <img src="local_img/sfac_logo.png"> -->
+  <footer>
+    <div class="parentfooter">
+        <div class="signature">
+          <p>designed and developed by <a href="https://aartics.com">&copy; aartics.com </a></p>
+        </div>
+        <div class="logowrapper">
+          <a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+          <a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume.png"/></a>
+          <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin.png"/></a>
+          <a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail.png"/></a>
+          <a href="https://github.com/aartics" class="logoc"><img src="../../img/github.png"/></a>
+        </div>
+    </div>
+  </footer>
 
   <script>
+    if(window.innerHeight < window.innerWidth){
+        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
+    }
   </script>
+  
 </body>
 </html>
