--- a/aartics/m/index.htm
+++ b/aartics/m/index.htm
@@ -31,7 +31,7 @@
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer + Engineer.<br> I'm bringing together my past experience in architecture and software engineering </br>to build new futures.<br> I am passionate about mixed realities, <br>and I'm not afraid of complexity.</p>
+        <p>I'm a UX Designer + Engineer.<br> I'm bringing together my past experience in architecture and software engineering </br>to build new futures.<br> I'm passionate about mixed realities, <br>and I embrace complexity.</p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
